[workspace]
members = [
    "arc/hello",
    "cell/loop-ref",
    "clap/quick01a",
    "closure/basic",
    "closure/fn-once-mut",
    "enum/matchs",
    "error-handling/custom-error",
    "error-handling/find",
    "error-handling/ok_or",
    "error-handling/question",
    "error-handling/read-file",
    "error-handling/result",
    "error-handling/result1",
    "features/bar",
    "features/feature_test",
    "features/feature_test_bin",
    "features/foo",
    "file/open",
    "function/diverging",
    "generic-array/hello",
    "guessing-game",
    "hashes/sha2",
    "macro/macro_namespace",
    "macro/macro_rules",
    "misc/hellorust",
    "mod/basic",
    "mod/bit",
    "op_overload/basic",
    "ownership/array",
    "ownership/borrowing",
    "ownership/closures",
    "ownership/derives",
    "ownership/lifetime",
    "panic/backtrace",
    "parity-common/rlp/codec",
    "pointer/smart",
    "procedural-macros/hello-world",
    "procedural-macros/hello-world/hello-world-derive",
    "procedural-macros/hello-world/test11",
    "rand/hello",
    "regex/hello",
    "reverse",
    "serde/derive",
    "std/io/read/file-read",
    "stdio/file_output",
    "stdio/print",
    "stdio/print_flush",
    "stdio/read",
    "stdio/read_expect",
    "stdio/read_file",
    "string/convert",
    "struct/impls",
    "struct/moves",
    "thread/join",
    "tokio/echo",
    "tokio/tracing",
    "tokio/mpsc",
    "trait/animal-interface",
    "unsafe/pointer",
    "variables",
    "defer/scopeguard-defer",
    "error-handling/err-snafu",
    "lifetime/func-ret",
    "opentelemetry/myopentelemetry-otlp",
    "json/lite-json",
    "overflow/overflow-std",
    "print/println",
    "convert/typeas",
    "generics/typeimpl",
    "error-handling/errwrap",
    "type/typenums",
    "type/typesize",
    "reqwest/syncexample",
    "reqwest/asyncexample",
    "tokio/example",
    "grpc/prost_message",
    "grpc/prost-live",
    "grpc/tonic-live",
    "course-rs/for-iter",
    "app/student-manager",
    "enum/methods",
    "trait/dyn_trait",
]
