[package]
name = "jsonrpsee-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http"
path = "src/http.rs"

[dependencies]
anyhow = "1.0.79"
hyper = "1.1.0"
jsonrpsee = { version = "0.21.0", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", featurs = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
