[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/future.rs"
name = "tokio-future"

[[bin]]
path = "src/main.rs"
name = "tokio-example"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
