[package]
name = "tokio_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/simple.rs"
name = "tracing_simple"

[dependencies.tracing]
git = "https://github.com/tokio-rs/tracing.git"
version = "0.2.0"

[dependencies.tracing-core]
git = "https://github.com/tokio-rs/tracing.git"
version = "0.2.0"

[dependencies.tracing-subscriber]
git = "https://github.com/tokio-rs/tracing.git"
version = "0.3.0"

[dependencies]
snafu = "0.6.10"
thiserror = "1.0.30"